--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes Page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
     <ul>
-        <li><a href="/recipes/yakisoba.html">Yakisoba Recipe</a></li>
+        <li><a href="recipes/yakisoba.html">Yakisoba Recipe</a></li>
     </ul>
 
 </body>
