--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <ul>
         <li><a href="recipes/yakisoba.html">Yakisoba Recipe</a></li>
+        <li><a href="recipes/lasagna.html">Lasgna Recipe</a></li>
+        <li><a href="recipes/spicy-chicken-noodles.html">Spicy Chicken Noodles Recipe</a></li>
     </ul>
 
 </body>
