--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasgna Recipe</title>
+    <title>Lasagna Recipe</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
 
-    <img src="https://www.allrecipes.com/thmb/iw7o3nDT9Oix_fPJXkJGlZyhFPo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4553680-yakisoba-chicken-lindsayjboyd-4x3-1-f1c0f8bb98444cd7b9b4376a73d7ae69.jpg" alt="Image of Chicken Yakisoba on a plate">
+    <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="Image of a partially eaten Lasagna in a glass dish">
 
     <h3>Description</h3>
 
-    <p>What a wonderful dish! I wanted something different today, and this fit the bill. It has a nice bite to it!! The only thing I did differently was I used a box of Japanese Ramen Noodles for the noodles. I also cooked everything double the time stated..I like my cabbage and carrots cooked til soft, that's just me.</p>
+    <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
 
     <h4>Ingredients</h4>
     <ul>
-        <li>½ teaspoon sesame oil</li>
-        <li>1 tablespoon canola oil</li>
-        <li>2 tablespoons chile paste</li>
-        <li>2 cloves garlic, chopped</li>
-        <li>4 skinless, boneless chicken breast halves - cut into 1 inch cubes</li>
+        <li>Meat</li>
+        <li>Onion and garlic</li>
+        <li>Sugar</li>
+        <li>Spice and seasonings</li>
+        <li>Lasagna noodles</li>
     </ul>
 
-    <h5>Steps</h5>
+    <h4>Steps</h5>
     <ol>
-        <li><p>In a large skillet combine sesame oil, canola oil and chili paste; stir-fry 30 seconds. Add garlic and stir fry an additional 30 seconds. Add chicken and 1/4 cup of the soy sauce and stir fry until chicken is no longer pink, about 5 minutes. Remove mixture from pan, set aside, and keep warm.</p></li>
-        <li><p>In the emptied pan combine the onion, cabbage, and carrots. Stir-fry until cabbage begins to wilt, 2 to 3 minutes. Stir in the remaining soy sauce, cooked noodles, and the chicken mixture to pan and mix to blend. Serve and enjoy!</p></li>
+        <li><p>Make the meat sauce</p></li>
+        <li><p>Cook the noodles</p></li>
     </ol>
 
 </body>
