--- a/recipes/spicy-chicken-noodles.html
+++ b/recipes/spicy-chicken-noodles.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spicy Chicke Noodles Recipe</title>
+    <title>Spicy Chicken Noodles Recipe</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Spicy Chicken Noodles Recipe</h1>
 
-    <img src="https://www.allrecipes.com/thmb/iw7o3nDT9Oix_fPJXkJGlZyhFPo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4553680-yakisoba-chicken-lindsayjboyd-4x3-1-f1c0f8bb98444cd7b9b4376a73d7ae69.jpg" alt="Image of Chicken Yakisoba on a plate">
+    <img src="https://www.allrecipes.com/thmb/iYvCr914MOIZ8lAI0-9DESXhbdI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4546075-spicy-chicken-noodles-Chef-John-1x1-1-f1d73f027f804fe8aa8c87248c93a3ba.jpg" alt="Image of Spicy Chicken Noodles on a plate">
 
     <h3>Description</h3>
 
-    <p>What a wonderful dish! I wanted something different today, and this fit the bill. It has a nice bite to it!! The only thing I did differently was I used a box of Japanese Ramen Noodles for the noodles. I also cooked everything double the time stated..I like my cabbage and carrots cooked til soft, that's just me.</p>
+    <p>No matter what recipe they're used in, rice noodles are a proven crowd-pleaser. I think this spicy chicken noodles dish is perfect for using up leftover chicken, assuming it wasn't horribly overcooked in the first place. If you did want to use raw chicken, go ahead and chop it up, and stir-fry it for a minute or two before adding your vegetables.</p>
 
     <h4>Ingredients</h4>
     <ul>
-        <li>½ teaspoon sesame oil</li>
-        <li>1 tablespoon canola oil</li>
-        <li>2 tablespoons chile paste</li>
-        <li>2 cloves garlic, chopped</li>
-        <li>4 skinless, boneless chicken breast halves - cut into 1 inch cubes</li>
+        <li>1 large carrot, finely sliced or shredded</li>
+        <li>2 cups shredded green cabbage</li>
+        <li>1 (8 ounce) package dried rice noodles</li>
+        <li>8 ounces cooked chicken breast, torn into bite-size pieces</li>
+        <li>½ cup freshly chopped cilantro</li>
     </ul>
 
-    <h5>Steps</h5>
+    <h4>Steps</h5>
     <ol>
-        <li><p>In a large skillet combine sesame oil, canola oil and chili paste; stir-fry 30 seconds. Add garlic and stir fry an additional 30 seconds. Add chicken and 1/4 cup of the soy sauce and stir fry until chicken is no longer pink, about 5 minutes. Remove mixture from pan, set aside, and keep warm.</p></li>
-        <li><p>In the emptied pan combine the onion, cabbage, and carrots. Stir-fry until cabbage begins to wilt, 2 to 3 minutes. Stir in the remaining soy sauce, cooked noodles, and the chicken mixture to pan and mix to blend. Serve and enjoy!</p></li>
+        <li><p>Place carrots, cabbage, bell pepper, jalapeno pepper, green onions, and garlic in a mixing bowl.</p></li>
+        <li><p>Heat large skillet over high heat; drizzle in vegetable oil. When oil is hot (almost but not quite smoking), add the vegetable mixture. Cook and stir until vegetables are hot and steamy, 1 or 2 minutes. Pour in sauce; cook and stir over high heat until sauce starts to bubble, about 1 minute. Add noodles and chicken. Cook and stir to blend ingredients and ensure ingredients are hot, about 1 minute. Remove from heat. Add chopped cilantro; stir.</p></li>
     </ol>
 
 </body>
